# jiebaR

./: .Rbuildignore  .Rprofile  .gitignore  .travis.yml  CMakeLists.txt  DESCRIPTION  LICENSE  Makefile  NAMESPACE  NEWS  NEWS.md  README.md  RR.txt  SUMMARY.md  appveyor.yml  book.json  bookdown.epub  bookdown.mobi  button.js  bylines.utf8  cran-.html  cran-comments.md  demo.cpp  fanjian.js  index.html  jiebaR.Rproj  rjieba.Rproj  search_index.json  section-1-1.html  section-1-2.html  section-2-2.html  section-2.html  section-3.html  section-5.html  section-6.html  section-7.html  temp.datr  temp.datt  worker-.html
.github/: ISSUE_TEMPLATE.md
R/: RcppExports.R  class.R  cpp.R  dict_tools.R  filter.R  gen_idf.R  get_tuple.R  ham_dist.R  jiebaR-package.r  jiebar.R  keywords.R  load.R  overload.R  para.R  print.R  quick.R  reload.R  rjieba-package.r  segment.R  simhash.R  tagger.R  thulac_policy.R  tobin.R  tools.R  util.R  v2.R  words_freq.R  worker.R  worker_func.R  zzz.R
basic/: README.md  install.md  new.md
dict/: README.md  dict.md  init.md  user.md
faq/: README.md  tm.md  warnings.md
inst/: AUTHORS  COPYRIGHTS
man/: DICTPATH.Rd  EditDict.Rd  ShowDictPath.Rd  apply_list.Rd  distance.Rd  download_thulac_model.Rd  edit_dict.Rd  equals-.simhash.Rd  fenci_init.Rd  file_coding.Rd  filecoding.Rd  filter_segment.Rd  freq.Rd  get_hardware_concurrency.Rd  get_idf.Rd  get_thulacr_path.Rd  get_tuple.Rd  jiebaR.Rd  keywords.Rd  less-than-equals-.keywords.Rd  less-than-equals-.qseg.Rd  less-than-equals-.segment.Rd  less-than-equals-.simhash.Rd  less-than-equals-.tagger.Rd  (+17 more)
(+149 files in other folders)
